--- a/common/build.gradle
+++ b/common/build.gradle
@@ -3,8 +3,11 @@ plugins {
 }
 
 base {
-    archivesBaseName = "${project.rootProject.name}"
-    version = "${project.version}-api"
+    archivesName = "${project.rootProject.name}"
+}
+
+jar {
+    archiveClassifier = "api"
 }
 
 dependencies {
