--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -22,19 +22,19 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     // ===== 외부 라이브러리 =====
-    implementation(include("com.google.code.gson:gson:2.10.1"))
-    implementation(include("org.java-websocket:Java-WebSocket:1.5.6"))
-    implementation(include("io.socket:socket.io-client:1.0.0"))
-    implementation(include("io.socket:engine.io-client:1.0.0"))
-    implementation(include("org.json:json:20240303"))
-    implementation(include("org.jetbrains.kotlin:kotlin-stdlib:1.9.20"))
-    implementation(include("com.squareup.okio:okio:3.3.0"))
-    implementation(include("com.squareup.okhttp3:okhttp:4.12.0"))
-    implementation(include("com.squareup.okhttp3:okhttp-sse:4.12.0"))
-    implementation(include("org.yaml:snakeyaml:2.5"))
-    implementation(include("com.fasterxml.jackson.core:jackson-annotations:2.20"))
-    implementation(include("com.fasterxml.jackson.core:jackson-databind:2.20.1"))
-    implementation(include("com.fasterxml.jackson.core:jackson-core:2.20.1"))
+    implementation(include(libs.gson.get()))
+    implementation(include(libs.java.websocket.get()))
+    implementation(include(libs.socket.io.client.get()))
+    implementation(include(libs.engine.io.client.get()))
+    implementation(include(libs.json.get()))
+    implementation(include(libs.kotlin.stdlib.get()))
+    implementation(include(libs.okio.get()))
+    implementation(include(libs.okhttp.get()))
+    implementation(include(libs.okhttpSse.get()))
+    implementation(include(libs.snakeyaml.get()))
+    implementation(include(libs.jackson.annotations.get()))
+    implementation(include(libs.jackson.databind.get()))
+    implementation(include(libs.jackson.core.get()))
     implementation(include(project(":common")))
 }
 
