--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,14 @@ yarn_mappings=1.20.1+build.1
 loader_version=0.16.14
 
 #Forge
-#1.12.2
+##common
+mod_id=nr-donation
+mod_name=NR-Donation
+mod_license=Custom
+mod_authors=Teujaem
+mod_description=
+
+##1.12.2
 forge_mc_version=1.12.2
 forge_version=14.23.5.2864
 forge_java_version=8
@@ -22,10 +29,17 @@ mapping_channel=snapshot
 mapping_version=20171003-1.12
 minecraft_version_range=[1.12.2,1.13)
 forge_version_range=[52,)
-mod_license=Custom
 loader_version_range=[52,)
-mod_authors=Teujaem
-mod_description=
+
+##1.20.1
+#forge_mc_version=1.20.1
+#forge_version=47.4.13
+#forge_java_version=17
+#mapping_channel=official
+#mapping_version=1.20.1
+#minecraft_version_range=[1.20.1,1.21)
+#forge_version_range=[47.4,48)
+#loader_version_range=[47.4,48)
 
 #Spigot
 spigot_api_version=1.12
