--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,12 @@ pluginManagement {
         }
         gradlePluginPortal()
     }
+    plugins {
+        id 'org.jetbrains.kotlin.jvm' version '2.2.21'
+    }
+}
+plugins {
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.8.0'
 }
 
 rootProject.name = 'NR-Donation'
